<resources>
    <string name="app_name">Kingdom Animalia</string>
    <string name="text_login">Silahkan masukkan nama anda pada kolom dibawah untuk melakukan penjelajahan di dunia hewan</string>
    <string name="text_penutup">Anda telah menyelesaikan penjelajahan pada delapan filum Kingdom Animalia. Sekarang saatnya untuk berenang menuju misi berikutnya.</string>
    <string name="text_filum_porifera">Porifera merupakan hewan invertebrata yang tubuhnya berpori seperti busa atau spons.</string>
    <string name="title_kelas_porifera">title kelas porifera</string>
    <string name="title_kelas_echinodermata">title kelas echinodermata</string>
    <string name="asset_calcarea">asset calcarea</string>
    <string name="button_calcarea">button calcarea</string>
    <string name="asset_hexatinellide">asset hexatinellide</string>
    <string name="button_hexatinellide">button hexatinellide</string>
    <string name="asset_demospongiae">asset demospongiae</string>
    <string name="button_demospongiae">button demospongiae</string>
    <string name="asset_porifera_calcarea">asset porifera_calcarea</string>
    <string name="title_porifera_calcarea">title porifera_calcarea</string>
    <string name="content_porifera_calcarea">content porifera_calcarea</string>
    <string name="asset_porifera_hexatinellide">asset porifera_hexatinellide</string>
    <string name="title_porifera_hexatinellide">title porifera_hexatinellide</string>
    <string name="content_porifera_hexatinellide">content porifera_hexatinellide</string>
    <string name="asset_porifera_demospongiae">asset porifera_demospongiae</string>
    <string name="title_porifera_demospongiae">title porifera_demospongiae</string>
    <string name="content_porifera_demospongiae">content porifera_demospongiae</string>
    <string name="text_filum_coelenterata">Coelenterata merupakan hewan invertebrata yang memiliki sel penyengat dan memiliki rongga tubuh yang berfungsi sebagai alat pencernaan.</string>
    <string name="attribute_line">attribute_line</string>
    <string name="title_filum">title filum</string>
    <string name="title_tts">title tts</string>
    <string name="content_filum">content filum</string>
    <string name="title_profil">title_profil_pengembang</string>
    <string name="title_eval">title_evaluasi</string>
    <string name="content_tts">content tts</string>
    <string name="title_kelas_filum">title kelas filum</string>
    <string name="asset_kelas_filum">asset kelas filum</string>
    <string name="button_kelas_filum">button kelas filum</string>
    <string name="asset_coelenterata">asset coelenterata</string>
    <string name="title_coelenterata">title coelenterata</string>
    <string name="content_coelenterata">content coelenterata</string>
    <string name="text_filum_platyhelminthes">Platyhelminthes merupakan hewan yang memiliki tiga lapisan sel (triploblastik).</string>
    <string name="asset_platyhelminthes">asset_platyhelminthes</string>
    <string name="title_platyhelminthes">title_platyhelminthes</string>
    <string name="content_platyhelminthes">content_platyhelminthes</string>
    <string name="daur_hidup_fasciola_hepatica">daur hidup fasciola hepatica</string>
    <string name="text_filum_nemathelminthes">Nemathelminthes merupakan hewan pseudoselomata yang berbentuk bulat panjang seperti benang (cacing gilig).</string>
    <string name="text_filum_annelida">Annelida (cacing gelang) merupakan hewan triploblastik yang sudah memiliki rongga tubuh sejati (selomata). Annelida memiliki tubuh yang bersegmen.</string>
    <string name="text_filum_mollusca">Mollusca merupakan kelompok hewan bertubuh lunak, dimana seringkali tubuhnya dilindungi oleh cangkang. Hewan ini memiliki tubuh simetri bilateral dan tergolong triploblastik selomata.</string>
    <string name="text_filum_arthropoda">Arthropoda merupakan hewan yang memiliki ciri kaki beruas, berbuku, atau bersegmen. Segmen juga terdapat pada tubuhnya. Tubuh Arthropoda yaitu simetri bilateral dantergolong trploblastik selomata.</string>
    <string name="text_filum_echinodermata">Echinodermata adalah kelompok hewan triploblastik selomata yang memiliki ciri khas adanya rangka dalam (endoskeleton) berduri yang menembus kulit.</string>
    <string name="contoh_nemathelminthes">contoh nemathelminthes</string>
    <string name="kingdom_animalia">Kingdom Animalia</string>
    <string name="menu">Menu</string>
    <string name="button_menu">button menu</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="terima_kasih">Terima Kasih</string>
    <string name="name">Nama</string>
    <string name="button_jelajah">button jelajah</string>
    <string name="image_welcome">image welcome</string>
    <string name="image_bye">image bye</string>
    <string name="petunjuk">Petunjuk</string>
    <string name="icon_petunjuk">icon petunjuk</string>
    <string name="gambar">gambar</string>
    <string name="content_nemathelminthes">content nemathelminthes</string>
    <string name="content_annelida">content annelida</string>
    <string name="enchinodermata">enchinodermata</string>
    <string name="no10">Tipe ascon merupakan tipe saluran air yang lubang ostiumnya dihubungkan denaan saluran lurus langsung ke spongosol</string>
    <string name="no_11">Tipe sycon merupakan tipe saluran air yang lubang ostiumnya dihubungkan denaan saluran bercabang yang masih terhubung langsung dengan spongosol</string>
    <string name="no_12">Tipe leucon merupakan tipe saluran air yang lubang ostiumnya bercabang-cabang ke rongga yang sudah tidak berhubungan langsung dengan spongosol</string>
    <string name="hal20_obel">Note:Susun puzzle daur hidup Obelia untuk melanjutkan ketahap berikutnya</string>
    <string name="hal31_dugesia">Note: Potonglah bagian tubuh Dugesia sesuai pada titik-titik yang telah ditentukan, dan amatilah bagaimana tubuh Dugesia dapat beregenerasi.</string>
    <string name="hal32_fasciola">Note: Pasangkanlah masing-masing bagian daur hidup Fasciola hepatica sesuai dengan urutan yang benar</string>
    <string name="ptnjuk">Untuk berpindah halaman pada tampilan di jelajah filum menggunakan Swipe Kanan atau Kiri.</string>
</resources>