<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_kelas_porifera"
            android:contentDescription="@string/title_kelas_porifera" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln1"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="188dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="39dp"
                android:background="@drawable/asset1_porifera"
                android:contentDescription="@string/asset_calcarea" />
            <ImageButton
                android:id="@+id/button1_porifera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1_porifera"
                android:contentDescription="@string/button_calcarea" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:background="@drawable/asset2_porifera"
                android:contentDescription="@string/asset_hexatinellide" />
            <ImageButton
                android:id="@+id/button2_porifera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button2_porifera"
                android:contentDescription="@string/button_hexatinellide" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="54dp"
                android:background="@drawable/asset3_porifera"
                android:contentDescription="@string/asset_demospongiae" />
            <ImageButton
                android:id="@+id/button3_porifera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button3_porifera"
                android:contentDescription="@string/button_demospongiae" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>