<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        tools:ignore="UselessParent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/asset_porifera_2"
            android:contentDescription="@string/asset_porifera_hexatinellide">
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_porifera_2"
            android:contentDescription="@string/title_porifera_hexatinellide">
        </ImageView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/content_porifera_2"
            android:contentDescription="@string/content_porifera_hexatinellide">
        </ImageView>
    </LinearLayout>
</RelativeLayout>