<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="50dp"
        android:scaleX="1.3"
        android:scaleY="1.3"/>

    <LinearLayout
        android:id="@+id/ln2"
        android:layout_below="@id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selamat_datang"
            android:fontFamily="@font/playlist_script"
            android:textColor="@color/white"
            android:textSize="40sp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln3"
        android:layout_below="@id/ln2"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:fontFamily="@font/spacemono_regular"
            android:textColor="@color/white"
            android:textAlignment="center">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ln4"
        android:layout_below="@id/ln3"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/textfield_user"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ln5"
        android:layout_below="@id/ln4"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true">
        <ImageButton
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_jelajah"
            android:contentDescription="@string/button_jelajah">
        </ImageButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln6"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ln5"
        android:gravity="bottom|end"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/asset_1"
            android:contentDescription="@string/image_welcome">
        </ImageView>
    </LinearLayout>


</RelativeLayout>