<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ln1"
        android:orientation="horizontal"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/asset_turbellaria"
            android:contentDescription="@string/asset_platyhelminthes"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ln2"
        android:layout_below="@id/ln1"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_platyhelminthes_1"
            android:contentDescription="@string/title_platyhelminthes"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ln3"
        android:layout_below="@id/ln2"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/content_platyhelmintes_turbellaria"
            android:contentDescription="@string/content_platyhelminthes"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="30dp"
        android:scaleX="1.3"
        android:scaleY="1.3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_home"
            android:contentDescription="@string/icon_petunjuk">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="110dp"
        android:scaleX="1.3"
        android:scaleY="1.3">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_arrow_left"
            android:contentDescription="@string/icon_petunjuk">
        </ImageView>
    </LinearLayout>

</RelativeLayout>