<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/ln1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/title_daur_obelia"
            android:contentDescription="@string/title_filum" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln2"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ln1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/asset_daur_obelia_bg2"
            android:contentDescription="@string/content_filum">
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp"
        android:scaleX="1"
        android:scaleY="1">

        <ImageView
            android:id="@+id/btnback"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:contentDescription="@string/icon_petunjuk"></ImageView>
        <ImageView
            android:id="@+id/btnhome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_home"
            android:contentDescription="@string/icon_petunjuk"></ImageView>
    </LinearLayout>
</RelativeLayout>