<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ln1"
        android:padding="40dp"
        android:orientation="vertical"

        android:layout_centerHorizontal="true"
        android:gravity="center">

        <ImageView
            android:layout_width="162dp"
            android:layout_height="138dp"
            android:background="@drawable/asset_73_cephalopoda"
            android:contentDescription="@string/title_filum" />

        <ImageView
            android:layout_width="163dp"
            android:layout_height="match_parent"
            android:background="@drawable/title_cephalopoda"
            android:contentDescription="@string/content_filum" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/content_mollusca_3_cephalopoda"
            android:contentDescription="@string/content_filum" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ln33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp"
        android:scaleX="1"
        android:scaleY="1">

        <ImageView
            android:id="@+id/btnback"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_exit_new"
            android:contentDescription="@string/icon_petunjuk"></ImageView>
        <ImageView
            android:id="@+id/btnhome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/button_home"
            android:contentDescription="@string/icon_petunjuk"></ImageView>

        <ImageView
            android:id="@+id/btnmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/button_menu"/>
    </LinearLayout>
</RelativeLayout>